Add material design

--- a/app/index.html
+++ b/app/index.html
@@ -372,7 +372,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<table class="table stats-table ">
 								<thead>
 									<tr>
-										<th>ITEM</th>
 										<th>EXCURSÃO</th>
 										<th>STATUS</th>
 										<th>LOTAÇÃO</th>
@@ -380,38 +379,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</thead>
 								<tbody>
 									<tr>
-										<th scope="row">1</th>
-										<td>Reveillon São Luis | 29/12/2017 à 02/01/2018</td>
+										<td scope="row"> Reveillon São Luis | 29/12/2017 à 02/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5>85% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
 									<tr>
-										<th scope="row">2</th>
-										<td>Reveillon Fortaleza | 27/12/2017 à 02/01/2018</td>
+										<td scope="row">Reveillon Fortaleza | 27/12/2017 à 02/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5>35% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
                   <tr>
-										<th scope="row">3</th>
-										<td>Mini Nordeste | 04 à 15/01/2018</td>
+										<td scope="row">Mini Nordeste | 04 à 15/01/2018</td>
 										<td><span class="label label-success">Em progresso</span></td>
 										<td><h5 class="down">10% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
 									<tr>
-										<th scope="row">4</th>
-										<td>Fortaleza com Jericoacoara | 09 à 16/01/2018</td>
+										<td scope="row">Fortaleza com Jericoacoara | 09 à 16/01/2018</td>
 										<td><span class="label label-warning">Nova</span></td>
 										<td><h5 class="down">0% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
                   <tr>
-										<th scope="row">5</th>
-										<td>Sudeste e Sul Fascinante | 03 à 22/01/2018</td>
+										<td scope="row">Sudeste e Sul Fascinante | 03 à 22/01/2018</td>
 										<td><span class="label label-warning">Nova</span></td>
 										<td><h5 class="down">0% <i class="fa fa-level-down"></i></h5></td>
 									</tr>
 									<tr>
-										<th scope="row">6</th>
-										<td>Semana Santa 03| 23/03 à 02/04/2018</td>
+										<td scope="row">Semana Santa 03| 23/03 à 02/04/2018</td>
 										<td><span class="label label-danger">Cancelada</span></td>
 										<td><h5>12% <i class="fa fa-level-up"></i></h5></td>
 									</tr>
