--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
  </div>
 
     <div class="copy">
-    <p>&copy;2017 Samistur do Brasil. Todos os direitos reservados | Desenvolvido por <a href="http://www.samistur.com.br" target="_blank">Samistur</a>
-</div>
+    	<p>&copy;2017 Samistur do Brasil. Todos os direitos reservados</p>
+		</div>
 </body>
 </html>
