--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-  <div>
-    <img id="background" src="images/b1.jpg" alt="" title="" />
+  <div class="container_div">
     <div class="form">
       <div class="thumbnail"><img src="images/logo.png"></div>
       <form class="login-form">
         <input type="text" placeholder="Usuário"/>
         <input type="password" placeholder="Senha"/>
         <button type="button" onclick="Entrar();">Entrar</button>
-        <p class="message"> <a href="http://www.samistur.com.br" target="_blank">www.samistur.com.br</a></p>
+        <p class="message">Sonhos que se tornam realidade! <a href="http://www.samistur.com.br" target="_blank">www.samistur.com.br</a></p>
       </form>
     </div>
 
