--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samistur do Brasil</title>
   <link href="images/shortcut.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/login.css">
