Ajustes no login

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samistur do Brasil</title>
-  <link href="images/shortcut.ico" rel="shortcut icon">
-  <link rel="stylesheet" href="css/login.css">
+  <link href="login/images/shortcut.ico" rel="shortcut icon">
+  <link rel="stylesheet" href="login/css/style.css">
 </head>
 <body>
-  <div class="container_div">
+  <div class="container">
     <div class="form">
-      <div class="thumbnail"><img src="images/logo.png"></div>
+      <div class="thumbnail"><img src="login/images/logo.png"></div>
       <form class="login-form">
         <input type="text" placeholder="Usuário"/>
         <input type="password" placeholder="Senha"/>
