--- a/app/index.html
+++ b/app/index.html
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul class="dropdown-menu extended logout">
                 <li><a href="#"><i class=" fa fa-suitcase"></i>Perfil</a></li>
                 <li><a href="#"><i class="fa fa-cog"></i> Configuracoes</a></li>
-                <li><a href="https://joelmarques.github.io/samistur-prototipo/"><i class="fa fa-key"></i> Sair</a></li>
+                <li><a href="../index.html"><i class="fa fa-key"></i> Sair</a></li>
             </ul>
         </li>
         <!-- user login dropdown end -->
