--- a/index.html
+++ b/index.html
@@ -2,29 +2,50 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Samistur do Brasil</title>
   <link href="login/images/shortcut.ico" rel="shortcut icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="login/css/style.css">
 </head>
+
 <body>
-  <div class="container">
-    <div class="form">
-      <div class="thumbnail"><img src="login/images/logo.png"></div>
-      <form class="login-form">
-        <input type="text" placeholder="Usuário"/>
-        <input type="password" placeholder="Senha"/>
-        <button type="button" onclick="Entrar();">Entrar</button>
-        <p class="message">Sonhos que se tornam realidade! <a href="http://www.samistur.com.br" target="_blank">www.samistur.com.br</a></p>
-      </form>
-    </div>
 
+<div class="pen-title">
+  <h1></h1>
+</div>
+<div class="container">
+  <div class="card"></div>
+  <div class="card">
+    <div class="title thumbnail"><img src="login/images/logo.png"></div>
+    <form>
+      <div class="input-container">
+        <input type="#{type}" id="#{label}" required="required"/>
+        <label for="#{label}">Usuário</label>
+        <div class="bar"></div>
+      </div>
+      <div class="input-container">
+        <input type="#{type}" id="#{label}" required="required"/>
+        <label for="#{label}">Senha</label>
+        <div class="bar"></div>
+      </div>
+      <div class="button-container">
+        <a href="app/index.html"><span>Entrar</span></a>
+      </div>
+      <div class="footer"><a href="#">Sonhos que se tornam realidade!</a></div>
+    </form>
   </div>
+  <div class="card alt">
+    <div class="toggle"></div>
+    <h1 class="title">Decole suas vendas!
+      <div class="close"></div>
+    </h1>
+  </div>
+</div>
+  <a id="portfolio" href="http://perfializa.me/" target="_blank" title="Confira nossos projetos"><i class="fa fa-link"></i></a>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script  src="login/js/index.js"></script>
 
-  <script>
-    function Entrar() {
-      window.location = "https://joelmarques.github.io/samistur-prototipo/app/index.html";
-    }
-  </script>
 </body>
 </html>
