--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
   </div>
 </div>
   <a id="portfolio" href="http://perfializa.me/" target="_blank" title="Confira nossos projetos"><i class="fa fa-link"></i></a>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script  src="login/js/index.js"></script>
+  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="login/js/index.js"></script>
 
 </body>
 </html>
