--- a/app/index.html
+++ b/app/index.html
@@ -197,33 +197,65 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <li class="sub-menu">
                     <a href="javascript:;">
+                        <i class="fa fa-laptop"></i>
+                        <span>Cadastros</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="#">Empresa</a></li>
+
+                        <li><a href="#">Colaboradores</a>
+                          <ul class="sub">
+                            <li><a href="#">Vendedores</a></li>
+                            <li><a href="#">Motoristas</a></li>
+                            <li><a href="#">Guias</a></li>
+                          </ul>
+                        </li>
+
+                        <li><a href="#">Transportes</a></li>
+                        <li><a href="#">Itens de Checagem</a></li>
+                        <li><a href="#">Fornecedores</a></li>
+                        <li><a href="#">Produtos</a></li>
+                        <li><a href="#">Moedas</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="clientes.html">
+                        <i class="fa fa-smile-o"></i>
+                        <span>Clientes</span>
+                    </a>
+                </li>
+
+                <li class="sub-menu">
+                    <a href="javascript:;">
                         <i class="fa fa-plane"></i>
                         <span>Excursões</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="clientes.html">Clientes</a></li>
                         <li><a href="excursoes.html">Excursões</a></li>
-                        <li><a href="fotos.html">Fotos</a></li>
+                        <li><a href="reservas.html">Reservas</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-truck"></i>
-                        <span>Fretamentos</span>
+                        <span>Fretes</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="#">Motoristas</a></li>
-                        <li><a href="#">Transportes</a></li>
-                        <li><a href="#">Itens de Checagem</a></li>
+                        <li><a href="#">Fretamentos</a></li>
+                        <li><a href="#">Abastecimentos</a></li>
+                        <li><a href="#">Manutenções</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-money"></i>
-                        <span>Pagamentos</span>
+                        <span>Financeiro</span>
                     </a>
                     <ul class="sub">
                         <li><a href="#">Gerar pagamento</a></li>
+                        <li><a href="#">Emitir recibo</a></li>
+                        <li><a href="#">Prestação de contas</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
@@ -232,9 +264,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <span>Relatorios</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="#">Manutenções</a></li>
-                        <li><a href="#">Resumo Financeiro</a></li>
-                        <li><a href="#">Agenda por Transporte</a></li>
+                        <li><a href="#">Pagamentos a receber por cliente</a></li>
+                        <li><a href="#">Pagamentos recebidos por cliente</a></li>
+                        <li><a href="#">Manutenções por transporte</a></li>
+                        <li><a href="#">Agendas por transporte</a></li>
+                        <li><a href="#">Resumo financeiro por excursão</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
@@ -253,6 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </a>
                     <ul class="sub">
                         <li><a href="mapas.html">Mapa Mundial</a></li>
+                        <li><a href="fotos.html">Fotos</a></li>
                     </ul>
                 </li>
             </ul>            </div>
