--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="button-container">
         <a href="app/index.html"><span>Entrar</span></a>
       </div>
-      <div class="footer"><a href="#">Sonhos que se tornam realidade!</a></div>
+      <div class="footer"><a href="#">Sua viagem começa aqui!</a></div>
     </form>
   </div>
   <div class="card alt">
@@ -44,7 +44,7 @@
   </div>
 </div>
   <a id="portfolio" href="http://perfializa.me/" target="_blank" title="Confira nossos projetos"><i class="fa fa-link"></i></a>
-  
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="login/js/index.js"></script>
 
