--- a/index.html
+++ b/index.html
@@ -1,52 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Samistur do Brasil</title>
   <link href="login/images/shortcut.ico" rel="shortcut icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
-  <link rel="stylesheet" href="login/css/style.css">
+  <link href="login/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
-<div class="pen-title">
-  <h1></h1>
-</div>
-<div class="container">
-  <div class="card"></div>
-  <div class="card">
-    <div class="title thumbnail"><img src="login/images/logo.png"></div>
-    <form>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Usuário</label>
-        <div class="bar"></div>
+  <div class="container">
+    <div class="box">
+      <div class="top">
+        <div class="logo">
+        </div>
       </div>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Senha</label>
-        <div class="bar"></div>
+      <div class="form">
+        <div class="input-container">
+          <input type="text" id="#{label}" required="required"/>
+          <label for="#{label}">Usuário</label>
+          <div class="bar"></div>
+        </div>
+        <div class="input-container">
+          <input type="password" id="#{label}" required="required"/>
+          <label for="#{label}">Senha</label>
+          <div class="bar"></div>
+        </div>
+        <div class="button-container">
+          <a href="app/index.html"><span>Entrar</span></a>
+        </div>
+        <div class="footer"><a href="#">Sua viagem começa aqui!</a></div>
       </div>
-      <div class="button-container">
-        <a href="app/index.html"><span>Entrar</span></a>
-      </div>
-      <div class="footer"><a href="#">Sua viagem começa aqui!</a></div>
-    </form>
+    </div>
   </div>
-  <div class="card alt">
-    <div class="toggle"></div>
-    <h1 class="title">Decole suas vendas!
-      <div class="close"></div>
-    </h1>
-  </div>
-</div>
-  <a id="portfolio" href="http://perfializa.me/" target="_blank" title="Confira nossos projetos"><i class="fa fa-link"></i></a>
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="login/js/index.js"></script>
-
 </body>
+
 </html>
